--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -308,7 +308,7 @@
                         <outlet property="setupNewDeviceButton" destination="4Cw-AT-ACb" id="by9-6y-6rD"/>
                         <segue destination="Nmh-ef-vpa" kind="show" identifier="tinker" id="4jN-EQ-1sH"/>
                         <segue destination="XC3-E0-ieD" kind="show" identifier="deviceInspector" id="Gcf-aV-58w"/>
-                        <segue destination="X78-kS-IVa" kind="show" id="FMV-i7-CgH"/>
+                        <segue destination="X78-kS-IVa" kind="show" identifier="meshSetup" id="FMV-i7-CgH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="btD-jl-5UQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1797,7 +1797,7 @@
         <!--Select Device-->
         <scene sceneID="Dpz-EY-2ga">
             <objects>
-                <viewController id="XGq-nS-TI2" customClass="MeshSetupSelectDeviceViewController" customModule="Particle_Mesh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XGq-nS-TI2" customClass="MeshSetupSelectDeviceViewController" customModule="Particle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PvV-Sy-zCy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="672"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1923,7 +1923,7 @@
         <!--Get Ready-->
         <scene sceneID="a83-h3-LXx">
             <objects>
-                <viewController id="SGv-mK-q5G" customClass="MeshSetupGetReadyViewController" customModule="Particle_Mesh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="SGv-mK-q5G" customClass="MeshSetupGetReadyViewController" customModule="Particle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nw6-RB-zCx">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="672"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -2223,14 +2223,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Nucleus" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="uJX-cq-bLL">
-                                                    <rect key="frame" x="15.000000000000004" y="5" width="58.333333333333336" height="18.666666666666668"/>
+                                                    <rect key="frame" x="15.000000000000004" y="6" width="58.333333333333336" height="18.666666666666668"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Bold" family="Gotham" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="4 devices on network" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SdB-DI-bdI">
-                                                    <rect key="frame" x="15" y="23.666666666666668" width="124" height="15.333333333333334"/>
+                                                    <rect key="frame" x="15" y="24.666666666666668" width="138.33333333333334" height="13"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="13"/>
                                                     <nil key="textColor"/>
